tests/paczka1/small_fuzzy/28460195.err
Error in line 2: e7E S931 34,3
Error in line 1: 9ex A279 25,0
Error in line 14: XrF A279 25,6
